test/users/ferguson/badcallerror.good
badcallerror.chpl:3: error: cannot initialize 'x' of type 'int(64)' from a 'proc(): int'
