test/users/ferguson/badcallerror.chpl
proc fun() do return 5;

var x:int = fun;
writeln(x);

